smartemission/smartemission#132 use JAVA ENV mem settings following Container limits